# genai-agent-modern-data-stack-specialist

./: README.md  config.yaml  pyproject.toml
adr/: 001-pydantic-para-configuracao.md  002-chroma-como-banco-vetorial.md
genai_agent_modern_data_stack_specialist/: cli.py  config_loader.py  config_models.py  repo_utils.py
prompts/: prompt-base.txt
prompts/personas/: arquiteto-dados.md  engenheiro-dados.md
roadmap/: 01-cli-basico.md  02-configuracao-llm-embeddings.md  03-configuracao-repositorios.md  04-configuracao-geral-e-variaveis.md  05-prompt-base-e-caracteristicas.md  06-banco-vetorial-chroma.md  06-integracao-e-orquestracao.md  07-integracao-e-orquestracao.md  08-analisar-arquivo.md  09-gerar-documentacao.md  10-sugerir-testes.md  README.md
