[tool.poetry]
name = "genai-agent-modern-data-stack"
version = "0.1.0"
description = "Agente CLI especialista em modern data stack, baseado em Langchain."
authors = ["Tiago N. Pinto Silva <tiagonpsilva@gmail.com>"]
readme = "README.md"

packages = [
    { include = "genai_agent_modern_data_stack_specialist" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
typer = "^0.12.3"
langchain = "^0.1.0"
rich = "^13.7.0"

[tool.poetry.scripts]
agent-data-specialist = "genai_agent_modern_data_stack_specialist.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 